2007-02-09  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/pdf.trm (PDF_point): Point type 1 was incorrectly drawn as a dot.
	Bug #1656433

2007-02-10  Juergen Wieferink  <wieferink@freenet.de>

	* src/plot.c (main): Flag 'interactive' not reset to FALSE after running
	command "gnuplot - nonExistingScript.gp". On some platforms, gnuplot
	cannot 'exit' and goes to an infinite loop after Ctrl-D.
	Bug #1612995 

2007-02-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot draw_3d_graphbox):  Add special-case
	tests to insure that the plot border is drawn either in back or
	in front of the grid when splot_map is set.
	Bug #1655001

2007-02-09  Petr Mikulik  <mikulik@physics.muni.cz>
	* docs/gnuplot.doc: Add a dummy label for "3 data style" to avoid
	bug in doc2gih (try "help contour").

2007-02-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/plot3d.c (eval_3dplots): Improved message for non-grid data.

2007-02-08  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_vector): Grid lines (linetype 0) were always
	treated as alternating black/white/black/white.  Change this to
	alternating current_color/transparent/current_color/transparent.
	Bug #1655001

2007-02-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c (test_palette_subcommand): Do not use deprecated
	syntax in internally-generated commands.
	Bug #1654570

	Update a contributed patch from May 2002   SourceForge #551439 

	* src/datafile.c (df_open plot_option_index df_readascii)
	docs/gnuplot.doc:  Allow data blocks in input file to be indexed
	by name in addition to indexing by ordinal numbers.
	   plot 'file' ... index '<name>' ...
	The data block is found by searching for <name> in an
	introductory comment record.

2007-02-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/misc.c src/graphics.c: Update comments to match code handling
	colorspec with "rgb variable".

	* src/save.c (save_pm3dcolor): Save/show "rgb variable" when needed.
