@@ -1,3 +1,12 @@
+2007-02-10  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	SF #1651350 win terminal: pause mouse key|any does not work
+
+	* src/mouse.c (event_keypress): Kill pending Pause dialog.
+
+	* src/win/wpause.c (PauseBox): Don't show "OK CANCEL" dialog when
+	pausing for mouse.
+
 2007-02-09  Daniel Sebald  <daniel.sebald@ieee.org>
 
 	* term/pdf.trm (PDF_point): Point type 1 was incorrectly drawn as a dot.
